--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,6 @@ body{
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-
 }
 .items{
     align-items: stretch;
@@ -34,13 +33,7 @@ body{
     height:fit-content;
     margin:0px;
 }
-.dragged {
-    border-radius: 10px;
-    position: absolute;
-    z-index: 999;
-    max-width:30%;
-    background: #fff;
-}
+
 .list-wrapper{
     background-color: rgb(254, 255, 255);
     border: 1px solid rgb(206, 199, 199);
@@ -58,7 +51,6 @@ body{
     font-size: 10px;
 }
 .add-card:hover,
-.item-text:hover,
 .cross:hover,
 .reject-cardText,
 .add-cardText{
@@ -68,6 +60,7 @@ textarea:focus{
     outline: none;
 }
 .item-text{
+    user-select: none;
     border:none;
     resize:none;
     appearance: none;
@@ -77,6 +70,7 @@ textarea:focus{
     word-wrap: break-word;
     margin: 0;
     box-sizing: border-box;
+    padding: 2px;
 }
 .item-list-wrap{
     list-style-type: none;
@@ -84,7 +78,6 @@ textarea:focus{
     box-sizing: border-box;
     width: 100%;
     padding:0;
-
 }
 .cross{
     margin-top: 2px;
@@ -123,3 +116,13 @@ textarea:focus{
 .deactive{
     display: none;
 }
+.dragged {
+    border-radius: 10px;
+    position: absolute;
+    max-width:30%;
+    background: #fff;
+    pointer-events: none;
+}
+/* .dragged:hover {
+cursor: grabbing;
+} */
